--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,34 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  background-color: #ffffff;
+  color: #171717;
+  transition: background-color 0.3s, color 0.3s;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* Estilos para o modo escuro */
+body.darkmode {
+  background-color: #161616;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+/* Personalização do Navbar para ficar com fundo separado */
+.navbar-light {
+  background-color: #f8f9fa; /* Cor clara para o Navbar */
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.navbar-dark {
+  background-color: #1B1B1B; /* Cor escura para o Navbar */
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+html, body{
+  width: 100%;
+  height: 100%;
+}
+
+div{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.navbar-container {
+  width: 75%; /* A largura da Navbar */
 }
