--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
 body {
   background-color: #ffffff;
   color: #171717;
@@ -11,24 +14,53 @@ body.darkmode {
 
 /* Personalização do Navbar para ficar com fundo separado */
 .navbar-light {
-  background-color: #f8f9fa; /* Cor clara para o Navbar */
+  background-color: #f8f9fa;
+  /* Cor clara para o Navbar */
 }
 
 .navbar-dark {
-  background-color: #1B1B1B; /* Cor escura para o Navbar */
+  background-color: #1B1B1B;
+  /* Cor escura para o Navbar */
 }
 
-html, body{
+.subletitle-dark{
+  color: gray;
+}
+
+html,
+body {
   width: 100%;
   height: 100%;
 }
 
-div{
+div {
   width: 100%;
   display: flex;
   justify-content: center;
 }
 
 .navbar-container {
-  width: 75%; /* A largura da Navbar */
+  width: 75%;
+  /* A largura da Navbar */
+}
+
+.main {
+  display: flex;
+  align-items: center;
+  height: 70vh;
+}
+
+.title {
+  font-size: 44px;
+  font-family: "Raleway", serif;
+  font-optical-sizing: auto;
+  font-weight: bold;
+}
+
+.subletitle {
+  font-family: "IBM Plex Mono", serif;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 1.5;
 }
