--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,12 +1,20 @@
-.button{
+.button {
     background-color: #3F8E00;
+    width: 75%;
     border-color: #62BA1B;
     border-radius: 1px;
     height: 63px;
     box-shadow: 0px 8px 30px 0 rgba(63, 142, 0, 0.5);
-    transition: box-shadow 0.3s ease; /* Smooth transition */
+    transition: box-shadow 0.3s ease;
+    /* Smooth transition */
 }
 
 .button:hover {
     background-color: #387902;
+}
+
+@media only screen and (max-width: 800px) {
+    .button {
+        width: 100%;
+    }
 }
