New route project, with a project card

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,6 +95,11 @@ div {
   width: 75% !important; /* Força a largura a ser aplicada */
 }
 
+.project-card{
+  display: flex;
+  flex-direction: column;
+}
+
 @media only screen and (max-width: 992px) {
   main {
     flex-direction: column;
