--- a/src/app/projects/next/page.module.css
+++ b/src/app/projects/next/page.module.css
@@ -1,6 +1,5 @@
 .container {
     background-color: #212529;
-    min-height: 80vh;
-    max-height: max-content;
+    height: 80vh;
     width: 75%;
 }
